--- a/src/app/modules/clientes/pagar-cuenta-corriente/pagar-cuenta-corriente.component.html
+++ b/src/app/modules/clientes/pagar-cuenta-corriente/pagar-cuenta-corriente.component.html
@@ -41,6 +41,18 @@
 
       <div class="col-md">
         <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Caja</mat-label>
+          <mat-select [formControl]="txCaja">
+            <mat-option *ngFor="let caja of cajas" [value]="caja.id">
+              {{caja.nombre}}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <app-error-messages [control]="txCaja"></app-error-messages>
+      </div>
+
+      <div class="col-md">
+        <mat-form-field appearance="outline" class="w-100">
           <mat-label>Forma de pago</mat-label>
           <mat-select [formControl]="txFormaDePago">
             <mat-option *ngFor="let formaDePago of formasDePago" [value]="formaDePago.id">
