--- a/src/styles.scss
+++ b/src/styles.scss
@@ -201,8 +201,8 @@ svg {
 
 .notify-loading {
   --mat-mdc-snack-bar-button-color: #535715;
-  --mdc-snackbar-container-color: #e9e9f5;
-  --mdc-snackbar-supporting-text-color: #5e92fc;
+  --mdc-snackbar-container-color: #fde4dc;
+  --mdc-snackbar-supporting-text-color: #e15b35;
   --mat-snack-bar-button-color: #a88c26;
   --mdc-snackbar-supporting-text-weight: 800;
 }
