fix: validadores en tx4UltimosDigitos
- Que tenga logitud mínima de 4 carac
- Que solo sean números
- Fix en ortografía de un msj de error

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -162,8 +162,8 @@
             </div>
             <div class="col-3">
               <mat-form-field appearance="outline" class="w-100">
-                <mat-label>Ult. 4 Dig.</mat-label>
-                <input type="text" matInput [formControl]="tx4UltimosDigitosTarjetas" maxlength="4"/>
+                <mat-label>Ult. 4 dig.</mat-label>
+                <input type="text" matInput [formControl]="tx4UltimosDigitosTarjetas" maxlength="4" minlength="4"/>
               </mat-form-field>
               <app-error-messages [control]="tx4UltimosDigitosTarjetas"></app-error-messages>
             </div>
