--- a/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
+++ b/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
@@ -31,7 +31,7 @@
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>CUIL</mat-label>
-            <input type="text" matInput [formControl]="txCuil"/>
+            <input type="text" matInput [formControl]="txCuil" mask="00-00000000-0"/>
           </mat-form-field>
           <app-error-messages [control]="txCuil"></app-error-messages>
         </div>
