--- a/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
+++ b/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.html
@@ -18,7 +18,7 @@
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Número de orden</mat-label>
-            <input type="text" matInput [formControl]="txPedido"/>
+            <input matInput [formControl]="txPedido" autocomplete="off" type="search"/>
           </mat-form-field>
           <app-error-messages [control]="txPedido"></app-error-messages>
         </div>
