--- a/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
+++ b/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
@@ -21,7 +21,7 @@
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Número de venta</mat-label>
-            <input type="text" matInput [formControl]="txNumero"/>
+            <input matInput [formControl]="txNumero" autocomplete="off" type="search"/>
           </mat-form-field>
           <app-error-messages [control]="txNumero"></app-error-messages>
         </div>
