--- a/src/app/modules/pedidos/registrar-pedido/registrar-pedido.component.html
+++ b/src/app/modules/pedidos/registrar-pedido/registrar-pedido.component.html
@@ -50,7 +50,7 @@
           <div class="col-md-3">
             <mat-form-field appearance="outline" class="w-100">
               <mat-label>Fecha de Pedido</mat-label>
-              <input matInput [matDatepicker]="pickerPedido" [formControl]="txFechaPedido" [max]="this.fechaHoy"/>
+              <input matInput [matDatepicker]="pickerPedido" [formControl]="txFechaPedido"/>
               <mat-datepicker-toggle matSuffix [for]="pickerPedido"></mat-datepicker-toggle>
               <mat-datepicker #pickerPedido></mat-datepicker>
             </mat-form-field>
