mandar el mensaje que queres mostrar en el open snack bar loading

--- a/src/app/shared/snack-bar-loading/snack-bar-loading.component.html
+++ b/src/app/shared/snack-bar-loading/snack-bar-loading.component.html
@@ -1,5 +1,5 @@
 <div class="loading-container">
-  <div class="loading-text">Facturando la venta</div>
+  <div class="loading-text">{{this.mensaje}}</div>
   <svg id="dots" height="25px" width="40px">
     <g fill="#999999">
       <circle id="dot1" cx="5" cy="15" r="2.5"></circle>
