--- a/src/app/modules/tarjetas/registrar-tarjeta/registrar-tarjeta.component.html
+++ b/src/app/modules/tarjetas/registrar-tarjeta/registrar-tarjeta.component.html
@@ -26,7 +26,7 @@
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Tipo de tarjeta</mat-label>
-            <mat-select [formControl]="txTipoTarjeta">
+            <mat-select [formControl]="txTipoTarjeta" (selectionChange)="cambioTipoTarjeta()">
               <mat-option *ngFor="let tipoTarjeta of listaTiposTarjetas" [value]="tipoTarjeta.id">
                 {{ tipoTarjeta.nombre }}
               </mat-option>
