--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -28,7 +28,7 @@
 
           <!-- Botón de 'Nuevo producto' -->
           <div class="col-sm-12 col-xl-3">
-            <button mat-stroked-button color="warn" class="btn round new-product-btn" (click)="registrarProducto()">
+            <button mat-stroked-button color="warn" class="btn round new-product-btn" (click)="registrarProducto()" [appRole]="['Administrador', 'Encargado']">
               <mat-icon>add</mat-icon>Nuevo producto
             </button>
           </div>
@@ -268,7 +268,7 @@
 
           <!-- Botones -->
           <div class="mt-4">
-            <button class="btn btn-custom" [disabled]="totalVenta == 0 || registrandoVenta" (click)="confirmarVenta()">
+            <button class="btn btn-custom" [disabled]="totalVenta == 0 || registrandoVenta" (click)="confirmarVenta()" [appRole]="['Cajero', 'Encargado']">
               <span>Confirmar venta</span>
               <span class="text-right">
                 $ {{ this.totalVenta | number:'1.2-2':'es-AR' }}
