fix: clientes, productos, empleados
- En productos, permitir numeros en el nombre del producto, solo si además se añaden letras
- En cliente, agregar longitud max de DNI, y mask en CUIT y que fecha nacimiento no pueda ser mayor a fecha hoy.
- En producto limpiar() no buscaba los productos
- En empleado, cambiar el orden de los filtros para coincidir con el orden de la tabla de abajo.

--- a/src/app/modules/clientes/registrar-clientes/registrar-clientes.component.html
+++ b/src/app/modules/clientes/registrar-clientes/registrar-clientes.component.html
@@ -59,7 +59,7 @@
       <div class="col-md-4" *ngIf="!pedirCUIT">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>DNI</mat-label>
-          <input type="text" matInput [formControl]="txDNI"/>
+          <input type="text" matInput [formControl]="txDNI" maxlength="8"/>
         </mat-form-field>
         <app-error-messages [control]="txDNI"></app-error-messages>
       </div>
@@ -67,7 +67,7 @@
       <div class="col-md-4" *ngIf="pedirCUIT">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>CUIT</mat-label>
-          <input type="text" matInput [formControl]="txCUIT"/>
+          <input type="text" matInput [formControl]="txCUIT" mask="00-00000000-0"/>
         </mat-form-field>
         <app-error-messages [control]="txCUIT"></app-error-messages>
       </div>
@@ -89,7 +89,7 @@
       <div class="col-md-4">
         <mat-form-field appearance="outline" class="w-100">
           <mat-label>Fecha de nacimiento</mat-label>
-          <input matInput [matDatepicker]="pickerFechaNacimiento" [formControl]="txFechaNacimiento" />
+          <input matInput [matDatepicker]="pickerFechaNacimiento" [formControl]="txFechaNacimiento" [max]="fechaHoy"/>
           <mat-datepicker-toggle matSuffix [for]="pickerFechaNacimiento"></mat-datepicker-toggle>
           <mat-datepicker #pickerFechaNacimiento></mat-datepicker>
         </mat-form-field>
