fix: visuales en paginators
- sacar botones de last y first page, y boton de cambio de items por pagina en paginator de consultar venta porque al estar paginado se rompe.
- TRADUCIR al ESPAÑOL los paginators de todos los componentes.

--- a/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
+++ b/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
@@ -193,7 +193,7 @@
           <mat-paginator
             [length]="totalDeVentas"
             [pageSize]="10"
-            [pageSizeOptions]="[5, 10, 20]"
+            [showFirstLastButtons]="false"
             (page)="onPageChange($event)" showFirstLastButtons>
           </mat-paginator>
         </div>
