el reporte de ventas no necesita graficos

--- a/src/app/modules/reportes/generar-reportes/generar-reportes.component.html
+++ b/src/app/modules/reportes/generar-reportes/generar-reportes.component.html
@@ -42,7 +42,7 @@
                 </mat-form-field>
               </div>
               <div class="col-md-3">
-                <mat-form-field appearance="outline" class="w-100">
+                <mat-form-field appearance="outline" class="w-100" *ngIf="!reporte.noNecesitaGrafico">
                   <mat-label>Gráfico</mat-label>
                   <mat-select [formControl]="txTipoGrafico">
                     <mat-option *ngFor="let grafico of tiposGraficos" [value]="grafico">
