--- a/src/app/modules/Estadisticas/visualizaciones-ventas/visualizaciones-ventas.component.html
+++ b/src/app/modules/Estadisticas/visualizaciones-ventas/visualizaciones-ventas.component.html
@@ -103,10 +103,16 @@
               <iframe [src]="grafanaUrls.fechaHora" class="chart-frame"></iframe>
             </div>
           </div>
-          <div class="col-md-12 mb-4">
+          <div class="col-md-6 mb-4">
             <div class="chart-card chart-full">
               <h3 class="chart-title"><span class="icon">👤</span> Ventas por empleados</h3>
               <iframe [src]="grafanaUrls.empleados" class="chart-frame"></iframe>
+            </div>
+          </div>
+          <div class="col-md-6 mb-4">
+            <div class="chart-card chart-full">
+              <h3 class="chart-title"><span class="icon">🙍‍♂️</span> Ventas por clientes</h3>
+              <iframe [src]="grafanaUrls.clientes" class="chart-frame"></iframe>
             </div>
           </div>
         </div>
