--- a/src/app/modules/home/productos-stock-limitado/productos-stock-limitado.component.html
+++ b/src/app/modules/home/productos-stock-limitado/productos-stock-limitado.component.html
@@ -13,6 +13,12 @@
       <mat-spinner></mat-spinner>
     </div>
 
+    <div class="no-productos-container" *ngIf="listaProductos.length == 0 && !buscando">
+      <div class="subtitle justify-content-center text-center">
+        No hay productos con stock mínimo.
+      </div>
+    </div>
+
     <div class="product-list-container" *ngIf="listaProductos">
       <div *ngFor="let producto of listaProductos">
         <div class="product-item">
