--- a/src/app/modules/inventario/registrar-inventario/registrar-inventario.component.html
+++ b/src/app/modules/inventario/registrar-inventario/registrar-inventario.component.html
@@ -52,8 +52,8 @@
     <br>
 
     <!-- loading -->
-    <div class="spinner-wrapper" *ngIf="movimientosProducto.length == 0 && !esRegistro">
-      <mat-spinner></mat-spinner>
+    <div class="spinner-wrapper" *ngIf="isLoading && !esRegistro">
+      <mat-spinner *ngIf="isLoading && !esRegistro"></mat-spinner>
     </div>
 
     <div class="row pt-4" *ngIf="movimientosProducto.length > 0 && !esRegistro">
